# HeatPump-Measurement-and-Regulation

./: .gitignore  README.md  Setup.msi
gui/MainGUI/: MainGUI.sln
gui/MainGUI/MainGUI/: App.xaml  BivalentGraph.cs  BivalentSimulation.xaml  BivalentSimulation.xaml.cs  COPandPCalcLib.cs  CalculateCOPandP.cs  Coil.cs  CompareWindow.xaml  CompareWindow.xaml.cs  Condenser.cs  Constants.cs  ElectricalAppliance.cs  EnterKeyTraversal.cs  ErrorPrinting.cs  GUIChecks.cs  MainGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  SystemCalculation.cs
gui/MainGUI/MainGUI/BivalentSimul/: BivalentGraph.cs  BivalentSimulation.xaml  BivalentSimulation.xaml.cs  BivalentUtilization.cs
gui/MainGUI/MainGUI/Extensions/: PopUpExtensions.cs
gui/MainGUI/MainGUI/Properties/: Annotations.cs  AssemblyInfo.cs
gui/MainGUI/MainGUI/RealTimeMeasurement/: ConsoleManager.cs  EnergyConsumption.cs  GraphsManager.cs  RealTimeMeasurement.xaml.cs  RealTimeMeasurementData.cs  RealTimeMeasurementWindow.xaml  RealTimeMeasurementWindow.xaml.cs
src/: AirRho.cpp  AirRho.h  CMakeLists.txt  Cp.cpp  Cp.h  library.cpp  library.h
tests/: AirRho_tests.cpp  CMakeLists.txt  CpTests.cpp  library_tests.cpp
